--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -14,10 +14,12 @@
     </style>
 </head>
 <body class="bg-black">
-    <div >
+    <div>
         <h1 id="title" class="heading">DOM Learning </h1>
-        <p>
+        <h1 id="title2" class="heading2">DOM Practise </h1>
+        <p id="para">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Non mollitia pariatur quibusdam dolor dignissimos quos accusantium, rem facilis exercitationem ipsa incidunt eligendi quia. Animi doloribus perspiciatis eligendi incidunt nihil laborum!
+        <span style="display:none">Hello Js</span>
         </p>
         <input type="password">password
 
