--- a/06_DOM/four.html
+++ b/06_DOM/four.html
@@ -11,7 +11,40 @@
     </ul>
 
 </body>
-<style>
-    
-</style>
+<script>
+
+    //Add Elements in Dom for 1 element
+    function addlang(langname){
+        const newli = document.createElement('li');
+        newli.innerHTML=`${langname}`;
+        document.querySelector('.lang').appendChild(newli);
+    }
+
+    // addlang("maths")
+    // addlang("Science")
+
+    //Add elements in dom for elements optimized approach
+    function newaddlang(langname){
+       const newli = document.createElement('li');
+       newli.appendChild(document.createTextNode(langname));
+       document.querySelector('.lang').appendChild(newli);
+    } 
+    newaddlang('physics')
+
+//edit
+    var editlang = document.querySelector("li:nth-child(2)");
+    //editlang.innerHTML="asas"
+    var newli = document.createElement('li');
+    newli.textContent = "ASAP";
+    editlang.replaceWith(newli);
+
+//edit2
+    var secondlang = document.querySelector("li:first-child")
+    secondlang.outerHTML='<li>TypeScript</li>'
+
+//delete
+    const lastlang = document.querySelector('li:last-child')
+    lastlang.remove();
+
+</script>
 </html>
